# financial_lab

./: .gitignore  hello.py  pyproject.toml
app/config/: settings.py
ingestion/: 01_ingestion.py  02_ingestion.py  AAPL_10-K_1A_temp.md  create_collection.py  run_query.py
ingestion/utils/: edgar_client.py  semantic_chunker.py
